feat(semver): add conventional commit template func (#5)

--- a/examples/README.md.tmpl
+++ b/examples/README.md.tmpl
@@ -20,3 +20,8 @@ This is an example `README.md.tmpl` showing the features of `mktmpl`.
 ## template with vars
 > You can include other templates `{{ tmplWithVars "examples/templateWithVars.tmpl" "version=v1.0.0" "name=kuberbernetes" }}`:
 <!--- {{ tmplWithVars "examples/templateWithVars.tmpl" "version=v1.0.0" "name=kuberbernetes" }} --->
+
+## bump versions based on the latest commit message
+> The template func `conventionalCommitBump` allows you to bump a specified version by using the latest git tag & commit message.
+`mdtmpl` will read the latest commit message from `.git/COMMIT_EDITMSG` parse it to a convetional commit and then return the next semantic version based on the latest git tag: `{{ conventionalCommitBump }}`:
+<!--- {{ conventionalCommitBump }} --->
