--- a/examples/README.md.tmpl
+++ b/examples/README.md.tmpl
@@ -23,5 +23,5 @@ This is an example `README.md.tmpl` showing the features of `mktmpl`.
 
 ## bump versions based on the latest commit message
 > The template func `conventionalCommitBump` allows you to bump a specified version by using the latest git tag & commit message.
-`mdtmpl` will read the latest commit message from `.git/COMMIT_EDITMSG` parse it to a convetional commit and then return the next semantic version based on the latest git tag: `{{ conventionalCommitBump }}`:
+`mdtmpl` will read the latest commit message from `.git/COMMIT_EDITMSG` parse it to a conventional commit and then return the next semantic version based on the latest git tag: `{{ conventionalCommitBump }}`:
 <!--- {{ conventionalCommitBump }} --->
